css/to_do.css
.content{
  display: flex;
  justify-content: space-between;
  font-family: sans-serif;
  margin: 20px;
}

.content h1{
  color: #708090;
  text-align: center;
  font-size: 28px;
}

#weather {
  color: #708090;
  font-size: 28px;
}

.dropzone{
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  width: 500px;
  height: 750px;
  overflow: auto;
  margin: 10px;
  border-radius: 10px;
  box-shadow: 1px 1px 1px #888888;
}

#to-dos {
  background: #7FFFD4;
}

#finish {
  background: #DDA0DD;
}

#draggable{
  background: transparent;
  margin: 10px;
  height: 150px;
  display: flex;
  flex-direction: column;
  position: relative;
}

#draggable:hover{
  margin-top: -2px;
}

#draggable textarea{
  width: 150px;
  height: 150px;
  background: #FFFACD;
  border: 1px solid transparent;
  border-radius: 5px;
  margin: 5px;
  padding: 15px;
  box-shadow: 5px 5px 5px #888888;
}

#draggable button{
  position: absolute;
  z-index: 2;
  background: none;
  border: none;
  font-weight: bold;
  top: 10px;
  left: 10px;
  font-size: 10px;
}

.dragndrop{
  display: flex;
  margin: 0 auto;
}

.get-weather{
  padding: 5px;
  width: 130px;
  height: 30px;
  box-sizing: border-box;
  border-radius: 5px;
  background: #9DE6FD;
  font-weight: bold;
  color:#483D8B;
  text-align: center;
  opacity: .7;
}

.get-weather:hover{
  opacity: 1;
}

.weather-container img{
  margin-top: 10px;
  width: 100px;
}

.weather-text{
  display: flex;
  margin-bottom: 28px;
}

#weather{
  width: 100px;
  margin-left: 10px;
}

